--- a/src/components/Form.css
+++ b/src/components/Form.css
@@ -4,25 +4,46 @@
   min-height: 100vh;
   background-color: #1dcf9f;
 }
+.details-container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  min-height: 100vh;
+  background-color: #eeeded;
+}
 .navBar {
   width: 100%;
   background-color: #f5f6f7;
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 .navBar img {
   width: 50px;
   height: 50px;
+  border-radius: 40%;
 }
 .title {
   font-size: 28px;
   margin-bottom: 0;
+}
+.profile-text {
+  font-size: 28px;
+  color: #1db990;
+  margin-right: 50px;
 }
 .sub-title {
   font-size: 12px;
   margin-top: 0;
   padding-bottom: 20px;
   color: #d1cfcf;
+}
+.btnLogOut {
+  padding: 10px 50px;
+  color: #fff;
+  background-color: #1db990;
+  border: none;
+  border-radius: 4px;
 }
 .Artist-form {
   flex-direction: row;
@@ -31,7 +52,17 @@
   background-color: #fff;
   padding: 50px;
 }
-
+.details-form {
+  flex-direction: row;
+  width: 50%;
+  height: auto;
+  background-color: #fff;
+  padding: 50px;
+}
+.details-title {
+  text-align: left;
+  text-decoration: 5px solid #1db990 underline;
+}
 label {
   float: left;
 }
@@ -43,17 +74,16 @@ label {
 input[type="text"],
 input[type="email"],
 input[type="password"],
-input[type="number"] {
+input[type="number"],
+.details {
   width: 100%;
   background-color: #f5f6f7;
   padding: 14px;
-  /* border: 1px solid #ccc; */
   border: none;
   border-radius: 4px;
   box-sizing: border-box;
   margin-top: 6px;
   margin-bottom: 16px;
-  /* resize: vertical; */
 }
 #lname {
   width: 45%;
@@ -69,7 +99,8 @@ input[type="number"] {
   margin-top: 0;
   padding-bottom: 20px;
 }
-input[type="submit"] {
+input[type="submit"],
+.btn {
   background-color: #1dcf9f;
   color: white;
   padding: 10px 100px;
